--- a/Pwa-download.html
+++ b/Pwa-download.html
@@ -7,78 +7,73 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --silver: #C4C4C4;
-      --charcoal: #1a1a1a;
       --gold: #e1bf78;
+      --red: #950606;
+      --green: #06954E;
+      --blue: #064D95;
       --white: #ffffff;
+      --black: #000000;
     }
 
     body {
       font-family: 'Montserrat', sans-serif;
+      background-color: var(--black);
+      color: var(--white);
       margin: 0;
       padding: 0;
-      background-color: var(--silver);
-      color: var(--charcoal);
-    }
-
-    .top-banner {
-      background-color: var(--charcoal);
-      padding: 30px 0 20px;
-      text-align: center;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.4);
-    }
-
-    .top-banner img {
-      max-width: 160px;
-      height: auto;
     }
 
     .wrapper {
       max-width: 700px;
-      margin: 0 auto;
-      background-color: var(--silver);
-      border: 4px solid rgba(0, 0, 0, 0.1);
-      border-top: none;
-      border-radius: 0 0 16px 16px;
+      margin: 40px auto;
+      background-color: var(--black);
+      border: 4px solid rgba(255, 255, 255, 0.2);
+      border-radius: 16px;
       padding: 40px 20px;
       text-align: center;
+    }
+
+    .logo {
+      max-width: 180px;
+      margin-bottom: 30px;
     }
 
     p.description {
       font-size: 1rem;
       line-height: 1.6;
       margin-bottom: 20px;
-      color: var(--charcoal);
+      color: var(--white);
     }
 
     .install-button {
       font-size: 1.1rem;
       font-weight: bold;
       padding: 16px 30px;
-      background-color: var(--charcoal);
-      color: var(--gold);
+      background-color: var(--red);
+      color: var(--white);
       border: none;
       border-radius: 10px;
       cursor: pointer;
       transition: all 0.2s ease;
-      box-shadow: 0 0 8px rgba(0,0,0,0.2);
+      box-shadow: 0 0 8px rgba(255,255,255,0.2);
       margin-bottom: 30px;
-      animation: pulse 2s infinite;
     }
 
     .install-button:hover {
       transform: scale(1.05);
-      box-shadow: 0 0 12px rgba(0,0,0,0.4);
+      box-shadow: 0 0 12px rgba(255,255,255,0.4);
     }
 
     .how-it-works {
       text-align: left;
-      background-color: rgba(255,255,255,0.3);
+      background-color: var(--blue);
+      border: 2px solid var(--green);
       border-radius: 12px;
       padding: 20px;
       max-height: 300px;
       overflow-y: auto;
       margin-bottom: 30px;
+      color: var(--white);
     }
 
     .how-it-works h2 {
@@ -94,21 +89,12 @@
     .how-it-works li {
       margin-bottom: 15px;
     }
-
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.08); }
-      100% { transform: scale(1); }
-    }
   </style>
 </head>
 <body>
-
-  <div class="top-banner">
-    <img src="le-libido-logo.png" alt="Le Libido Logo" />
-  </div>
-
   <div class="wrapper">
+    <img src="le-libido-logo.png" alt="Le Libido Logo" class="logo" />
+
     <p class="description">
       Le Libido is the dating app that only works when you’re out in the world. You check into a venue like a bar, a café, a restaurant, etc. and the app activates, showing you who else is nearby and open to making a connection right here and right now. There’s no ghosting. No swiping. Just instant IRL connection with real people, in real places, in real time.
     </p>
