--- a/Pwa-download.html
+++ b/Pwa-download.html
@@ -96,7 +96,7 @@
     <img src="le-libido-logo.png" alt="Le Libido Logo" class="logo" />
 
     <p class="description">
-      Le Libido is the dating app that only works when you’re out in the world. You check into a venue like a bar, a café, a restaurant, etc. and the app activates, showing you who else is nearby and open to making a connection right here and right now. There’s no ghosting. No swiping. Just instant IRL connection with real people, in real places, in real time.
+      Le Libido is the dating app that only works when you’re out in the world. There’s no ghosting. No swiping. Just instant IRL connection with real people, in real places, in real time.
     </p>
 
     <button class="install-button" id="installButton">Install the App & Enable Access</button>
