--- a/Pwa-download.html
+++ b/Pwa-download.html
@@ -20,7 +20,7 @@
       background-color: var(--black);
       color: var(--white);
       margin: 0;
-      padding: 40px 20px;
+      padding: 0;
       border: 6px solid var(--gold);
       box-sizing: border-box;
     }
@@ -31,11 +31,13 @@
       background-color: var(--black);
       border-radius: 16px;
       text-align: center;
+      padding: 40px 20px; /* Creates equal spacing top & bottom */
     }
 
     .logo {
       max-width: 240px;
-      margin-bottom: 30px;
+      display: block;
+      margin: 0 auto 40px auto; /* Bottom space matches top padding */
     }
 
     p.description {
