--- a/Pwa-download.html
+++ b/Pwa-download.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Download the App – Le Libido</title>
+  <link rel="manifest" href="manifest.json">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -22,6 +23,7 @@
       margin: 0;
       padding: 0;
       border: 6px solid var(--gold);
+      border-radius: 24px;
       box-sizing: border-box;
     }
 
@@ -31,13 +33,13 @@
       background-color: var(--black);
       border-radius: 16px;
       text-align: center;
-      padding: 40px 20px; /* Creates equal spacing top & bottom */
+      padding: 40px 20px;
     }
 
     .logo {
-      max-width: 240px;
+      max-width: 280px;
       display: block;
-      margin: 0 auto 40px auto; /* Bottom space matches top padding */
+      margin: 0 auto 20px auto;
     }
 
     p.description {
@@ -69,7 +71,7 @@
     .how-it-works {
       text-align: left;
       background-color: var(--blue);
-      border: 3px solid var(--green);
+      border: 4px solid var(--green);
       border-radius: 12px;
       padding: 20px;
       max-height: 300px;
@@ -95,7 +97,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <img src="le-libido-logo.png" alt="Le Libido Logo" class="logo" />
+    <img src="golden-le-libido.png" alt="Le Libido Logo" class="logo" />
 
     <p class="description">
       Le Libido is the dating app that only works when you’re out in the world. There’s no ghosting. No swiping. Just instant IRL connection with real people, in real places, in real time.
