--- a/Pwa-download.html
+++ b/Pwa-download.html
@@ -3,165 +3,109 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Download the App – Le Libido</title>
-  <link rel="manifest" href="manifest.json">
+  <title>Le Libido – Install App</title>
+
+  <!-- PWA Manifest & Meta -->
+  <link rel="manifest" href="manifest.json" />
+  <meta name="theme-color" content="#e1bf78">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="Le Libido">
+  <link rel="apple-touch-icon" href="le-libido-icon.png">
+  <link rel="icon" type="image/png" href="le-libido-icon.png" />
+
+  <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
+  <!-- Styles -->
   <style>
     :root {
       --gold: #e1bf78;
       --red: #950606;
-      --green: #06954E;
       --blue: #064D95;
-      --white: #ffffff;
-      --black: #000000;
+      --green: #06954E;
+      --black: #0d0d0d;
     }
 
     body {
+      margin: 0;
       font-family: 'Montserrat', sans-serif;
       background-color: var(--black);
-      color: var(--white);
-      margin: 0;
-      padding: 0;
-      border: 6px solid var(--gold);
-      border-radius: 24px;
-      box-sizing: border-box;
-    }
-
-    .wrapper {
-      max-width: 700px;
-      margin: 0 auto;
-      background-color: var(--black);
-      border-radius: 16px;
+      color: white;
       text-align: center;
       padding: 40px 20px;
     }
 
+    .outer-border {
+      border: 6px solid var(--gold);
+      border-radius: 20px;
+      max-width: 700px;
+      margin: 40px auto;
+      padding: 40px 30px;
+      background-color: var(--black);
+    }
+
     .logo {
-      max-width: 280px;
+      max-width: 180px;
+      margin: 0 auto 20px;
       display: block;
-      margin: 0 auto 20px auto;
     }
 
-    p.description {
-      font-size: 1rem;
-      line-height: 1.6;
-      margin-bottom: 20px;
-      color: var(--white);
+    .tagline {
+      font-size: 1.5rem;
+      max-width: 580px;
+      margin: 0 auto 20px;
     }
 
-    .install-button {
-      font-size: 1.1rem;
-      font-weight: bold;
-      padding: 16px 30px;
+    .instructions {
+      margin-top: 50px;
+      font-size: 0.95rem;
+      color: var(--gold);
+    }
+
+    .pulse-button {
+      display: inline-block;
       background-color: var(--red);
-      color: var(--white);
+      color: white;
+      font-size: 1rem;
+      padding: 14px 26px;
       border: none;
-      border-radius: 10px;
+      border-radius: 30px;
       cursor: pointer;
-      margin-bottom: 30px;
-      animation: pulse 1.8s infinite;
+      animation: pulse 1.5s infinite;
+      margin-top: 30px;
     }
 
     @keyframes pulse {
-      0% { transform: scale(1); box-shadow: 0 0 10px rgba(149, 6, 6, 0.4); }
-      50% { transform: scale(1.07); box-shadow: 0 0 20px rgba(149, 6, 6, 0.8); }
-      100% { transform: scale(1); box-shadow: 0 0 10px rgba(149, 6, 6, 0.4); }
-    }
-
-    .how-it-works {
-      text-align: left;
-      background-color: var(--blue);
-      border: 4px solid var(--green);
-      border-radius: 12px;
-      padding: 20px;
-      max-height: 300px;
-      overflow-y: auto;
-      margin-bottom: 30px;
-      color: var(--white);
-    }
-
-    .how-it-works h2 {
-      font-size: 1.2rem;
-      margin-bottom: 10px;
-    }
-
-    .how-it-works ol {
-      padding-left: 20px;
-      font-size: 0.95rem;
-    }
-
-    .how-it-works li {
-      margin-bottom: 15px;
+      0% { transform: scale(1); opacity: 1; }
+      50% { transform: scale(1.05); opacity: 0.9; }
+      100% { transform: scale(1); opacity: 1; }
     }
   </style>
 </head>
-<body>
-  <div class="wrapper">
-    <img src="golden-le-libido.png" alt="Le Libido Logo" class="logo" />
 
-    <p class="description">
+<body>
+  <div class="outer-border">
+    <img src="le-libido-icon.png" alt="Le Libido Logo" class="logo" />
+    <p class="tagline">
       Le Libido is the dating app that only works when you’re out in the world. There’s no ghosting. No swiping. Just instant IRL connection with real people, in real places, in real time.
     </p>
 
-    <button class="install-button" id="installButton">Install the App & Enable Access</button>
+    <button class="pulse-button" onclick="alert('To install, follow the instructions below if prompted by your browser. On iOS Safari, use “Add to Home Screen” from the Share menu.')">
+      Install the App
+    </button>
 
-    <div class="how-it-works">
-      <h2>🔥 How It Works</h2>
-      <ol>
-        <li><strong>Take our hilariously sexy 10-question quiz</strong><br>Discover who you’re compatible with and why they might just be your perfect match.</li>
-        <li><strong>Choose your mode: Verified or Anonymous</strong><br>Then complete your profile. Keep it mysterious, or show off who you are and share exactly what you’re looking for.</li>
-        <li><strong>Scope out the scene</strong><br>Peek at who’s hot at each venue before you go, or check into a bar, café, or restaurant to get checked in and see who’s checking you out.</li>
-        <li><strong>Make your move</strong><br>Tap “Approach” to see who wants to meet you right now, or keep your location private until you “Invite” someone and give them permission to approach you.</li>
-        <li><strong>Slide into real life</strong><br>Use our 1-on-1 or group chat feature to set up your date IRL, and skip the small talk.</li>
-      </ol>
-    </div>
+    <p class="instructions">
+      <strong>On iPhone:</strong> Tap the <span style="font-size:1.2em;">📤</span> Share icon in Safari, then choose<br><strong>“Add to Home Screen”</strong>.
+    </p>
   </div>
 
+  <!-- Service Worker Registration -->
   <script>
-    let deferredPrompt;
-
-    window.addEventListener('beforeinstallprompt', (e) => {
-      e.preventDefault();
-      deferredPrompt = e;
-    });
-
-    document.getElementById('installButton').addEventListener('click', async () => {
-      if (deferredPrompt) {
-        deferredPrompt.prompt();
-        const { outcome } = await deferredPrompt.userChoice;
-        console.log(`User response to the install prompt: ${outcome}`);
-        deferredPrompt = null;
-      }
-
-      // Push Notification Permission
-      if ('Notification' in window && Notification.permission !== 'granted') {
-        try {
-          const permission = await Notification.requestPermission();
-          console.log(`Push notification permission: ${permission}`);
-        } catch (e) {
-          console.error('Push request failed', e);
-        }
-      }
-
-      // Geolocation Access
-      if ('geolocation' in navigator) {
-        navigator.geolocation.getCurrentPosition(
-          (position) => {
-            console.log('Geo granted:', position.coords);
-          },
-          (error) => {
-            console.error('Geo denied:', error);
-          },
-          {
-            enableHighAccuracy: true,
-            timeout: 10000,
-            maximumAge: 0
-          }
-        );
-      } else {
-        console.warn('Geolocation not supported');
-      }
-    });
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service-worker.js')
+        .then(() => console.log('✅ Service Worker registered'))
+        .catch(err => console.error('❌ Service Worker failed:', err));
+    }
   </script>
 </body>
 </html>
