--- a/Pwa-download.html
+++ b/Pwa-download.html
@@ -13,7 +13,6 @@
       --blue: #064D95;
       --white: #ffffff;
       --black: #000000;
-      --silver: #c0c0c0;
     }
 
     body {
@@ -21,37 +20,25 @@
       background-color: var(--black);
       color: var(--white);
       margin: 0;
-      padding: 0;
-      border: 6px solid var(--gold);
-      border-radius: 20px;
-      box-sizing: border-box;
-    }
-
-    .top-banner {
-      background-color: var(--silver);
-      padding: 20px;
+      padding: 30px 20px;
       text-align: center;
-      border-bottom: 6px solid var(--gold);
     }
 
-    .logo {
-      max-width: 280px;
-      margin: 0 auto 10px;
-      display: block;
-    }
-
-    .wrapper {
-      max-width: 700px;
-      margin: 20px auto;
-      padding: 0 20px 40px;
-      text-align: center;
+    img.icon-preview {
+      width: 200px;
+      height: 200px;
+      border-radius: 30px;
+      border: 4px solid var(--gold);
+      box-shadow: 0 0 20px rgba(255, 215, 0, 0.4);
+      margin-bottom: 20px;
+      cursor: pointer;
     }
 
     p.description {
-      font-size: 0.95rem;
-      line-height: 1.6;
-      margin-top: 20px;
-      margin-bottom: 30px;
+      font-size: 1rem;
+      line-height: 1.5;
+      max-width: 600px;
+      margin: 0 auto 30px;
     }
 
     .install-button {
@@ -64,7 +51,7 @@
       border-radius: 10px;
       cursor: pointer;
       margin-bottom: 30px;
-      animation: pulse 1.8s infinite;
+      animation: pulse 2s infinite;
     }
 
     @keyframes pulse {
@@ -76,26 +63,27 @@
     .how-it-works {
       text-align: left;
       background-color: var(--blue);
-      border: 3px solid var(--green);
-      border-radius: 12px;
-      padding: 20px;
-      max-height: 300px;
-      overflow-y: auto;
-      margin-bottom: 30px;
+      border: 4px solid var(--green);
+      border-radius: 16px;
+      padding: 25px;
+      max-width: 700px;
+      margin: 0 auto;
     }
 
     .how-it-works h2 {
-      font-size: 1.2rem;
+      font-size: 1.3rem;
       margin-bottom: 10px;
+      color: var(--white);
     }
 
     .how-it-works ol {
       padding-left: 20px;
-      font-size: 0.95rem;
+      font-size: 1rem;
+      line-height: 1.6;
     }
 
     .how-it-works li {
-      margin-bottom: 15px;
+      margin-bottom: 16px;
     }
 
     .safari-instructions {
@@ -107,41 +95,45 @@
       margin-top: 20px;
       border-radius: 10px;
       border: 2px solid var(--gold);
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
     }
   </style>
 </head>
 <body>
-  <div class="top-banner">
-    <img src="le-libido-logo.png" alt="Le Libido Logo" class="logo" />
+
+  <!-- Icon as preview of app -->
+  <img src="le-libido-icon.png" alt="Le Libido App Icon" class="icon-preview" id="iconInstall">
+
+  <!-- App description -->
+  <p class="description">
+    Le Libido is the dating app that only works when you’re out in the world. There’s no ghosting. No swiping. Just instant IRL connection with real people, in real places, in real time.
+  </p>
+
+  <!-- Install button -->
+  <button class="install-button" id="installButton">Install the App</button>
+
+  <!-- Safari instructions -->
+  <div id="safariInstructions" class="safari-instructions">
+    🧠 On iPhone?<br> Tap the <strong>Share</strong> icon in Safari and select <strong>"Add to Home Screen"</strong> to install the app. (This is how iOS does it!)
   </div>
 
-  <div class="wrapper">
-    <p class="description">
-      Le Libido is the dating app that only works when you’re out in the world. There’s no ghosting. No swiping. Just instant IRL connection with real people, in real places, in real time.
-    </p>
-
-    <button class="install-button" id="installButton">Install the App & Enable Access</button>
-
-    <div id="safariInstructions" class="safari-instructions">
-      🧠 On iPhone?<br> Tap the <strong>Share</strong> icon in Safari and select <strong>"Add to Home Screen"</strong> to install the app. (This is how iOS does it!)
-    </div>
-
-    <div class="how-it-works">
-      <h2>🔥 How It Works</h2>
-      <ol>
-        <li><strong>Take our hilariously sexy 10-question quiz</strong><br>Discover who you’re compatible with and why they might just be your perfect match.</li>
-        <li><strong>Choose your mode: Verified or Anonymous</strong><br>Then complete your profile. Keep it mysterious, or show off who you are and share exactly what you’re looking for.</li>
-        <li><strong>Scope out the scene</strong><br>Peek at who’s hot at each venue before you go, or check into a bar, café, or restaurant to get checked in and see who’s checking you out.</li>
-        <li><strong>Make your move</strong><br>Tap “Approach” to see who wants to meet you right now, or keep your location private until you “Invite” someone and give them permission to approach you.</li>
-        <li><strong>Slide into real life</strong><br>Use our 1-on-1 or group chat feature to set up your date IRL, and skip the small talk.</li>
-      </ol>
-    </div>
+  <!-- How it works -->
+  <div class="how-it-works" style="margin-top: 40px;">
+    <h2>🔥 How It Works</h2>
+    <ol>
+      <li><strong>Take our hilariously sexy 10-question quiz</strong><br>Discover who you’re compatible with and why they might just be your perfect match.</li>
+      <li><strong>Choose your mode: Verified or Anonymous</strong><br>Then complete your profile. Keep it mysterious, or show off who you are and share exactly what you’re looking for.</li>
+      <li><strong>Scope out the scene</strong><br>Peek at who’s hot at each venue before you go, or check into a bar, café, or restaurant to get checked in and see who’s checking you out.</li>
+      <li><strong>Make your move</strong><br>Tap “Approach” to see who wants to meet you right now, or keep your location private until you “Invite” someone and give them permission to approach you.</li>
+      <li><strong>Slide into real life</strong><br>Use our 1-on-1 or group chat feature to set up your date IRL, and skip the small talk.</li>
+    </ol>
   </div>
 
   <script>
     let deferredPrompt;
 
-    // Detect Safari on iOS
     const isIOS = /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
     const isSafari = /^((?!chrome|android).)*safari/i.test(navigator.userAgent);
 
@@ -150,44 +142,50 @@
       document.getElementById('installButton').style.display = 'none';
     }
 
-    // Prepare install prompt for other browsers
+    // Listen for install prompt event
     window.addEventListener('beforeinstallprompt', (e) => {
       e.preventDefault();
       deferredPrompt = e;
     });
 
-    document.getElementById('installButton').addEventListener('click', async () => {
-      // Request Notifications
+    async function requestPermissions() {
+      // Push
       if ('Notification' in window && Notification.permission !== 'granted') {
         try {
-          const permission = await Notification.requestPermission();
-          console.log(`Push notification permission: ${permission}`);
-        } catch (e) {
-          console.error('Push request failed', e);
+          await Notification.requestPermission();
+        } catch (err) {
+          console.log('Push permission error:', err);
         }
       }
 
-      // Request Geolocation
+      // Geolocation
       if ('geolocation' in navigator) {
         navigator.geolocation.getCurrentPosition(
-          (position) => {
-            console.log('Geo granted:', position.coords);
-          },
-          (error) => {
-            console.error('Geo denied:', error);
-          },
-          { enableHighAccuracy: true, timeout: 10000, maximumAge: 0 }
+          (pos) => console.log('Geo success:', pos),
+          (err) => console.warn('Geo error:', err),
+          { enableHighAccuracy: true, timeout: 8000 }
         );
       }
+    }
 
-      // Trigger Install Prompt
+    // Handle install button click
+    const installButton = document.getElementById('installButton');
+    const iconInstall = document.getElementById('iconInstall');
+
+    async function handleInstallClick() {
+      await requestPermissions();
+
       if (deferredPrompt) {
         deferredPrompt.prompt();
-        const { outcome } = await deferredPrompt.userChoice;
-        console.log(`User response to the install prompt: ${outcome}`);
+        const choice = await deferredPrompt.userChoice;
+        console.log('Install choice:', choice.outcome);
         deferredPrompt = null;
       }
-    });
+    }
+
+    installButton.addEventListener('click', handleInstallClick);
+    iconInstall.addEventListener('click', handleInstallClick);
   </script>
+
 </body>
 </html>
